[package]

name = "void"
version = "1.0.2"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-void.git"
description = "The uninhabited void type for use in statically impossible cases."
readme = "README.md"
license = "MIT / Apache-2.0"

[dependencies]

serde = "1"
serde_derive = "1"

[features]

default = ["std"]
std = []

